--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,30 @@
 body{
     font-family: 'Poppins', sans-serif;
     background: #303a52a9;
+    animation: yourAnimation 2s forwards 0s ease-in-out;
+}
+
+@keyframes yourAnimation{
+    0%{
+        transform: rotate(0);
+        background: linear-gradient(to right, rgb(55, 59, 68), rgb(66, 134, 244));
+        opacity: 0.25;
+        }
+    100%{
+        transform: rotate(0);
+        background: linear-gradient(to right, rgb(55, 59, 68), rgb(66, 134, 244));
+        opacity: 1;
+        }
 }
 
 .main-header{
     height: 55px;
-    background-color: #44b0d1bb;
+    background-color: #303a52;
     color: blanchedalmond;
 }
 
 #brand-logo{
-    width: 28px;
+    width: 25px;
     padding: 4px;
 }
 .brand{
@@ -63,13 +77,25 @@ body{
     height: 100vh;
     width: 100%;
     background: url(../Images/1.jpg) no-repeat;
-    background-color: #0e153ab4;
     background-size: 1200px 500px;
     background-position: 20px 48px;
     padding: 20px;
-    /* margin-top: 90px; */
     margin-left: 0;
     color: #c5e3f6;
+    animation: yourAnimation2 1.2s forwards 0s ease-out;
+}
+
+@keyframes yourAnimation2{
+    0%{
+        transform: rotate(0) scale(0.6) skewX(0deg);
+        background: linear-gradient(to right, rgb(55, 59, 68), rgb(66, 134, 244));
+        opacity: 0;
+        }
+    100%{
+        transform: rotate(0) scale(1) skewX(0);
+        background: linear-gradient(to right, rgb(55, 59, 68), rgb(66, 134, 244)) url(../Images/1.jpg) no-repeat;
+        opacity: 1;
+        }
 }
 
 .showcase h1{
@@ -78,6 +104,18 @@ body{
     left: 80px;
     font-size: 50px;
     font-weight: 600;
+    animation: yourAnimation1 1.4s forwards 0s ease;
+}
+
+@keyframes yourAnimation1{
+    0%{
+        transform: rotate(0) scale(.8) translateY(-80px) skewX(15deg);
+        opacity: 0;
+        }
+    100%{
+        transform: rotate(0) scale(1) translateY(0) skewX(0);
+        opacity: 1;
+        }
 }
 
 .showcase h2{
@@ -133,7 +171,7 @@ float: inline-start;
     text-align: center;
     margin: 1.67%;
     vertical-align: middle;
-    border: grey 1px solid;
+    border: #4c4e52 1px solid;
     border-radius: 10px;
     padding: 15px;
     background-color: #303a52;
