--- a/css/style.css
+++ b/css/style.css
@@ -76,16 +76,16 @@ body{
 .showcase{
     height: 100vh;
     width: 100%;
-    background: url(../Images/1.jpg) no-repeat;
+    /* background: url(../Images/1.jpg) no-repeat; */
     background-size: 1200px 500px;
     background-position: 20px 48px;
     padding: 20px;
     margin-left: 0;
     color: #c5e3f6;
-    animation: yourAnimation2 1.2s forwards 0s ease-out;
+    animation: yourAnimation1 1.2s forwards 0s ease-out;
 }
 
-@keyframes yourAnimation2{
+@keyframes yourAnimation1{
     0%{
         transform: rotate(0) scale(0.6) skewX(0deg);
         background: linear-gradient(to right, rgb(55, 59, 68), rgb(66, 134, 244));
@@ -93,21 +93,29 @@ body{
         }
     100%{
         transform: rotate(0) scale(1) skewX(0);
-        background: linear-gradient(to right, rgb(55, 59, 68), rgb(66, 134, 244)) url(../Images/1.jpg) no-repeat;
+        background: linear-gradient(to right, rgb(55, 59, 68), rgb(66, 134, 244));
         opacity: 1;
         }
 }
 
-.showcase h1{
+.showcase img{
     position: absolute;
-    top: 220px;
-    left: 80px;
-    font-size: 50px;
-    font-weight: 600;
-    animation: yourAnimation1 1.4s forwards 0s ease;
+    top: 5%;
+    left: 2.5%;
+    z-index: -1;
+    width: 90%;
 }
 
-@keyframes yourAnimation1{
+.showcase h1{
+    position: absolute;
+    top: 22%;
+    left: 5.6%;
+    font-size: 50px;
+    font-weight: 600;
+    animation: yourAnimation2 1.4s forwards 0s ease;
+}
+
+@keyframes yourAnimation2{
     0%{
         transform: rotate(0) scale(.8) translateY(-80px) skewX(15deg);
         opacity: 0;
@@ -120,22 +128,22 @@ body{
 
 .showcase h2{
     position: absolute;
-    top: 300px;
-    left: 80px;
+    top: 34%;
+    left: 5.6%;
     font-size: 40px;
 }
 
 .showcase p{
     position: absolute;
-    top: 350px;
-    left: 80px;
+    top: 41%;
+    left: 5.6%;
 }
 
 .button{
     position: absolute;
     vertical-align: middle;
-    top: 400px;
-    left: 80px;
+    top: 48%;
+    left: 5.6%;
     width: 80px;
     padding: 5px 10px;
     border-radius: 10px;
@@ -145,7 +153,7 @@ body{
 }
 
 .button:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
     background-color: rgba(0, 0, 0, 0.774);
     color: #44b0d1bb;
 }
@@ -162,14 +170,15 @@ body{
 margin-top: 0px;
 clear: both;
 float: inline-start;
+align-items: center;
 }
 
 .flex-item{
-    width: 370px;
+    width: 28%;
     height: 200px;
     display: inline-block;
     text-align: center;
-    margin: 1.67%;
+    margin: 1.33%;
     vertical-align: middle;
     border: #4c4e52 1px solid;
     border-radius: 10px;
@@ -212,4 +221,28 @@ footer{
     text-align: center;
     padding: 1.2rem;
     margin-top: 4%;
+}
+
+[data-scroll]{
+    transition: all 1.2s;
+}
+
+[data-scroll="in"]{
+    opacity: 1;
+    transform: translateY(0);
+}
+
+[data-scroll="out"]{
+    opacity: 0.15;
+    transform: translateY(30%);
+}
+@keyframes yourAnimation3{
+    0%{
+        transform: rotate(0) translateY(-25%);
+        opacity: 0.1;
+        }
+    100%{
+        transform: rotate(0) translateY(0);
+        opacity: 1;
+        }
 }
