--- a/css/style.css
+++ b/css/style.css
@@ -251,11 +251,11 @@ footer h3{
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     html{font-size: 6px;}
-  
+    }
   /* Small devices (portrait tablets and large phones, 600px and up) */
   @media only screen and (min-width: 600px) {
     html{font-size: 6px;}
-  
+    } 
   /* Medium devices (landscape tablets, 768px and up) */
   @media only screen and (min-width: 768px) {
     html{font-size: 8px;}
